My html/css work

--- a/Tish designs/musical.html
+++ b/Tish designs/musical.html
@@ -6,21 +6,11 @@
  </head>
   <body>
 <header>
-<div class="navbar">
-      <div class="container">
-        <h2 class="fl-left">TI<span>NA</span></h2>
-          <ul>
-            <li><a href="musical.html" target="_blank">musical</a></li>
-            <li><a href="type.html" target="_blank">type</a></li>
-            <li><a href="song.html" target="_blank">song</a></li>
-            <li><a href="art.html" target="_blank">art</a></li>
-          </ul>
-      </div>
-    </div>  
+  
   </header>
   <h1> WHAT IS MUSIC</h1>
   <div class="main-container">
-  <p><a href="musical.html" target="_blank">You<a/> want to grow <em>musically</em>then this is the place to be.<br/>you also want to know how to have smooth vocals then you can start a journey together with us.This is where you get to have an experience of a lifetime.Music is essential to many of our lives. We listen to it when waking up, while in transit, at work, and with our friends. For many,<br/> music is like a constant companion. It can bring us joy and motivate us, accompany us through difficult times, and alleviate our worries.<br/> 
+  <p>You<a/> want to grow <em>musically</em>then this is the place to be.<br/>you also want to know how to have smooth vocals then you can start a journey together with us.This is where you get to have an experience of a lifetime.Music is essential to many of our lives. We listen to it when waking up, while in transit, at work, and with our friends. For many,<br/> music is like a constant companion. It can bring us joy and motivate us, accompany us through difficult times, and alleviate our worries.<br/> 
 
 Music is much more than mere entertainment. It has been a feature of every known human society—anthropologists and sociologists have yet to find a single culture throughout the course of human history that has not had music. In fact, many evolutionary psychologists today make the argument that music predated language. Primitive tribes and religious practices have used music to reach enlightened states for thousands of years, and Pythagoras used music to heal different psychological and physical ailments. Currently, cutting-edge scientific research has shown the effect that music has on the brain, the individual, and society. <br/>
 
