--- a/art.html
+++ b/art.html
@@ -5,19 +5,25 @@
 <body>
 
 <header>
-<ul>
-  <li><a href="musical.html" target="_blank">musical</a></li>
-  <li><a href="type.html" target="_blank">type</a></li>
-  <li><a href="song.html" target="_blank">song</a></li>
-  <li><a href="art.html" target="_blank">art</a></li>
-  </ul>
+<div class="navbar">
+			<div class="container">
+				<h2 class="fl-left">TI<span>NA</span></h2>
+					<ul>
+					  <li><a href="musical.html" target="_blank">musical</a></li>
+					  <li><a href="type.html" target="_blank">type</a></li>
+					  <li><a href="song.html" target="_blank">song</a></li>
+					  <li><a href="art.html" target="_blank">art</a></li>
+  				</ul>
+			</div>
+		</div>	
   </header>
 <link rel="stylesheet" href="css/my.css">
 <div class="Friends">
 </div>
   <h1><font color="blue"><strong>POEM</strong></font></h1>
-  
 <div class="main-container">
+<img src ="img/me.jpg">
+   <div class="main-container">
 
   <p><strong>FRIENDS</strong><br/><br/>
 Friendship is one of lifes greatest treasures.<br/>
@@ -37,12 +43,7 @@ Infact,<br/>many find the in spiration from the joy brought brought about by a f
 or the pain caused by a failed friendship.<br/>
 <br/>
 POEM BY <br/>
-Tina N.Nanzala<br/></p>
-</div>
-</header>
-<div class="main-container">
-<img src ="img/me.jpg">
-
+<strong>Tina N.Nanzala</strong<br/></p>
 </div>
 <br/>
-<p>However,this can also be classified as a song</p> 
+ 
