--- a/song.html
+++ b/song.html
@@ -5,12 +5,17 @@
 <body>
 
 <header>
-<ul>
-  <li><a href="musical.html" target="_blank">musical</a></li>
-  <li><a href="type.html" target="_blank">type</a></li>
-  <li><a href="song.html" target="_blank">song</a></li>
-  <li><a href="art.html" target="_blank">art</a></li>
-  </ul>
+<div class="navbar">
+			<div class="container">
+				<h2 class="fl-left">TI<span>NA</span></h2>
+					<ul>
+					  <li><a href="musical.html" target="_blank">musical</a></li>
+					  <li><a href="type.html" target="_blank">type</a></li>
+					  <li><a href="song.html" target="_blank">song</a></li>
+					  <li><a href="art.html" target="_blank">art</a></li>
+  				</ul>
+			</div>
+		</div>	
   </header>
 <link rel="stylesheet" href="css/my.css">
 <h1><font color="blue"<strong>Would you still love me
@@ -72,7 +77,10 @@ Would you still love me?<br/>
 Would you still love me?<br/>
 Would you still love me?<br/>
 Would you still love me?<br/>
-<vid src=https://youtu.be/5XGmC3S9SkM="vid/mp4"></vid>
+<div>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/5XGmC3S9SkM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+
 </p>
 </div>
 </header>
