--- a/type.html
+++ b/type.html
@@ -7,13 +7,18 @@
 <body>
 
 <header>
-<ul>
-  <li><a href="musical.html" target="_blank">musical</a></li>
-  <li><a href="type.html" target="_blank">type</a></li>
-  <li><a href="song.html" target="_blank">song</a></li>
-  <li><a href="art.html" target="_blank">art</a></li>
-  </ul>
-  </header> 
+<div class="navbar">
+			<div class="container">
+				<h2 class="fl-left">TI<span>NA</span></h2>
+					<ul>
+					  <li><a href="musical.html" target="_blank">musical</a></li>
+					  <li><a href="type.html" target="_blank">type</a></li>
+					  <li><a href="song.html" target="_blank">song</a></li>
+					  <li><a href="art.html" target="_blank">art</a></li>
+  				</ul>
+			</div>
+		</div>	
+  </header>
 <h1>Type</h1>
 <header>
 <div class= "main-container"> 
