--- a/art.html
+++ b/art.html
@@ -26,8 +26,8 @@
    <div class="main-container">
 
   <p><strong>FRIENDS</strong><br/><br/>
-Friendship is one of lifes greatest treasures.<br/>
-Friends that are loyal arte always there to<br/>
+Friendship is one of life's greatest treasures.<br/>
+Friends that are loyal are always there to<br/>
 make you laugh when you are down,<br>
 They are not afraid  to help you avoid mistakes<br/> 
 They never let you down nor ditch you<br/>
@@ -39,7 +39,7 @@ never gets off that wrist ,<br/>
 Others may not be quite as loving<br/>
 The pain caused by friendship marred by <br/>
 Betrayal is not easy to overcome.
-Infact,<br/>many find the in spiration from the joy brought brought about by a friend 
+Infact,<br/>many find the in spiration from the joy brought about by a friend 
 or the pain caused by a failed friendship.<br/>
 <br/>
 POEM BY <br/>
