--- a/type.html
+++ b/type.html
@@ -40,29 +40,27 @@
 <h3>WHY MUSIC MATTERS</h3>
 <p>
 
-Music, like nothing else, can reach into our lives and affect us. Music changes our mood, sharpens our thoughts; it can transport us to places we visited, help us relive memories of special moments in our lives. Young or old, it has the power to make us healthier, happier, and more connected as friends, family, and as parts of a larger community.
+Music, like nothing else, can reach into our lives and affect us. Music changes our mood, sharpens our thoughts; it can transport us to places we visited, help us relive memories of special moments in our lives. Young or old, it has the power to make us healthier, happier, and more connected as friends, family, and as parts of a larger community.</p>
 
 
-Emotional Benefits
-Music is a creative, positive form of expression. Learning a song and being able to sing independently is a source of pride to a preschooler. Music also gives young children another way to express themselves through activity and sound.
+<p><strong>Emotional Benefits</strong></p>
+<p><strong>Social Benefits</strong></p>
 
-Social Benefits
+<p><strong>Physical Benefits</strong></p>
 
-Physical Benefits
+<strong>Linguistic Benefits</strong>
+<p>Singing and musical stories can help children with vocabulary and reading skills, understanding lyrics and word play. Exposure to a wide vocabulary through music can help children learn 
+Improves Social Connections</p>
 
-Linguistic Benefits
-Singing and musical stories can help children with vocabulary and reading skills, understanding lyrics and word play. Exposure to a wide vocabulary through music can help children learn 
-Improves Social Connections
+<strong>Strengthens Social Connections</strong>
 
-Strengthens Social Connections
+<p>Elevates Quality of Life for Adults
+Older people who are actively involved in music show improvements with anxiety, loneliness, and depression issues that are critical in coping with stress, stimulating the immune system and improving health. </p>
 
-Elevates Quality of Life for Adults
-Older people who are actively involved in music show improvements with anxiety, loneliness, and depression issues that are critical in coping with stress, stimulating the immune system and improving health. 
+<strong>Improves School Performance</strong>
 
-Improves School Performance
-
-Better Math Testing
-Middle school and high school students who report consistently high levels of involvement in instrumental music show significantly higher levels of mathematics proficiency by grade 12 regardless of students' socio-economic status.</p>
+<strong>Better Math Testing</strong>
+<p>Middle school and high school students who report consistently high levels of involvement in instrumental music show significantly higher levels of mathematics proficiency by grade 12 regardless of students' socio-economic status.</p>
 <image src="image/catchy songs.jpg">
 
 </div>
